--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </div>
 
 <div class="name">
-	WebGL Flower Cursor
+	Feliz Cumple Cass
 </div>
 
 <script type="x-shader/x-fragment" id="fragmentShader">
